# hotfiles

./: .Xresources  .api_keys  .gitattributes  .gtkrc-2.0  .p10k.zsh  .stalonetrayrc  .vimrc  .xbindkeysrc  .xinitrc  .xprofile  .zshrc  LICENSE  README.md
xfwm4-gaps/: AUTHORS  COMPOSITOR  Makefile  Makefile.am  Makefile.in  NEWS  NOTES  README.md  TODO  aclocal.m4  autoclean.sh  autogen.sh  client-Handle-removal-of-GTK_FRAME_EXTENTS.patch  config.h  config.h.in  config.status  configure.ac  configure.ac.in  configure~  example.gtkrc-2.0  gaps.patch  libtool  xfwm4-4.16.1-rounded-corners.patch
xfwm4-gaps/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2
xfwm4-gaps/common/: Makefile  Makefile.am  Makefile.in  libxfwm-common.la  libxfwm_common_la-xfwm-common.lo  xfwm-common.c  xfwm-common.h
xfwm4-gaps/common/.deps/: libxfwm_common_la-xfwm-common.Plo
xfwm4-gaps/common/.libs/: libxfwm-common.la
xfwm4-gaps/defaults/: Makefile  Makefile.am  Makefile.in  defaults
xfwm4-gaps/helper-dialog/: Makefile  Makefile.am  Makefile.in  helper-dialog  helper-dialog.c
xfwm4-gaps/helper-dialog/.deps/: helper_dialog-helper-dialog.Po
xfwm4-gaps/icons/: Makefile  Makefile.am  Makefile.in
xfwm4-gaps/icons/128x128/: Makefile  Makefile.am  Makefile.in
xfwm4-gaps/icons/16x16/: Makefile  Makefile.am  Makefile.in
xfwm4-gaps/icons/22x22/: Makefile  Makefile.am  Makefile.in
xfwm4-gaps/icons/48x48/: Makefile  Makefile.am  Makefile.in
xfwm4-gaps/icons/scalable/: Makefile  Makefile.am  Makefile.in
xfwm4-gaps/po/: .intltool-merge-cache  Makefile  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  am.gmo  am.po  ar.gmo  ar.po  ast.gmo  ast.po  be.gmo  be.po  be@tarask.gmo  be@tarask.po  bg.gmo  bg.po  bn.gmo  bn.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en_AU.gmo  en_AU.po  en_CA.gmo  en_CA.po  en_GB.gmo  en_GB.po  eo.gmo  eo.po  es.gmo  es.po  (+98 more)
xfwm4-gaps/settings-dialogs/: Makefile  Makefile.am  Makefile.in  range-debouncer.c  range-debouncer.h  tweaks-settings.c  workspace-resource.c  workspace-resource.h  workspace-settings.c  workspace.gresource.xml  xfce-wm-settings.desktop  xfce-wm-settings.desktop.in  xfce-wmtweaks-settings.desktop  xfce-wmtweaks-settings.desktop.in  xfce-workspaces-settings.desktop  xfce-workspaces-settings.desktop.in  xfwm4-dialog.glade  xfwm4-dialog_ui.h  xfwm4-settings  xfwm4-settings.c  xfwm4-settings.h  xfwm4-tweaks-dialog.glade  xfwm4-tweaks-dialog_ui.h  xfwm4-tweaks-settings  xfwm4-workspace-dialog.glade  xfwm4-workspace-dialog_ui.h  xfwm4-workspace-settings
xfwm4-gaps/settings-dialogs/.deps/: xfwm4_settings-range-debouncer.Po  xfwm4_settings-xfwm4-settings.Po  xfwm4_tweaks_settings-range-debouncer.Po  xfwm4_tweaks_settings-tweaks-settings.Po  xfwm4_workspace_settings-workspace-resource.Po  xfwm4_workspace_settings-workspace-settings.Po
xfwm4-gaps/src/: .indent.pro  Makefile  Makefile.am  Makefile.in  client.c  client.c.orig  client.c.rej  client.h  compositor.c  compositor.h  cycle.c  cycle.h  device.c  device.h  display.c  display.h  event_filter.c  event_filter.h  events.c  events.h  focus.c  focus.h  frame.c  frame.h  gen-color-table.pl  hints.c  hints.h  icons.c  icons.h  keyboard.c  keyboard.h  main.c  menu.c  menu.h  misc.c  misc.h  moveresize.c  moveresize.h  mypixmap.c  mypixmap.h  (+38 more)
xfwm4-gaps/src/.deps/: xfwm4-client.Po  xfwm4-compositor.Po  xfwm4-cycle.Po  xfwm4-device.Po  xfwm4-display.Po  xfwm4-event_filter.Po  xfwm4-events.Po  xfwm4-focus.Po  xfwm4-frame.Po  xfwm4-hints.Po  xfwm4-icons.Po  xfwm4-keyboard.Po  xfwm4-main.Po  xfwm4-menu.Po  xfwm4-misc.Po  xfwm4-moveresize.Po  xfwm4-mypixmap.Po  xfwm4-mywindow.Po  xfwm4-netwm.Po  xfwm4-parserc.Po  xfwm4-placement.Po  xfwm4-poswin.Po  xfwm4-screen.Po  xfwm4-session.Po  xfwm4-settings.Po  xfwm4-spinning_cursor.Po  xfwm4-stacking.Po  xfwm4-startup_notification.Po  xfwm4-tabwin.Po  xfwm4-terminate.Po  xfwm4-transients.Po  xfwm4-ui_style.Po  xfwm4-wireframe.Po  xfwm4-workspaces.Po  xfwm4-xsync.Po
xfwm4-gaps/themes/: Makefile  Makefile.am  Makefile.in
xfwm4-gaps/themes/daloa/: Makefile  Makefile.am  Makefile.in  README  bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-pressed.xpm  maximize-toggled-active.xpm  maximize-toggled-inactive.xpm  maximize-toggled-prelight.xpm  menu-active.xpm  menu-inactive.xpm  menu-prelight.xpm  right-active.xpm  right-inactive.xpm  shade-active.xpm  shade-inactive.xpm  shade-pressed.xpm  shade-toggled-active.xpm  shade-toggled-inactive.xpm  shade-toggled-prelight.xpm  stick-active.xpm  stick-inactive.xpm  stick-pressed.xpm  stick-toggled-active.xpm  stick-toggled-inactive.xpm  (+16 more)
xfwm4-gaps/themes/default-hdpi/: Makefile  Makefile.am  Makefile.in  bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-prelight.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-prelight.xpm  maximize-pressed.xpm  maximize-toggled-active.xpm  maximize-toggled-inactive.xpm  maximize-toggled-prelight.xpm  maximize-toggled-pressed.xpm  menu-active.xpm  menu-inactive.xpm  menu-pressed.xpm  right-active.xpm  right-inactive.xpm  shade-active.xpm  shade-inactive.xpm  shade-prelight.xpm  shade-pressed.xpm  shade-toggled-active.xpm  shade-toggled-inactive.xpm  shade-toggled-prelight.xpm  shade-toggled-pressed.xpm  (+15 more)
xfwm4-gaps/themes/default-xhdpi/: Makefile  Makefile.am  Makefile.in  bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-prelight.xpm  (+43 more)
(+1090 files in other folders)
