actionsiconsdir = $(datadir)/icons/hicolor/22x22/actions
actionsicons_DATA =								\
	xfce-wm-close.png						\
	xfce-wm-maximize.png						\
	xfce-wm-menu.png						\
	xfce-wm-minimize.png						\
	xfce-wm-shade.png						\
	xfce-wm-stick.png						\
	xfce-wm-unmaximize.png						\
	xfce-wm-unshade.png						\
	xfce-wm-unstick.png
	

EXTRA_DIST = $(actionsicons_DATA)
