appiconsdir = $(datadir)/icons/hicolor/scalable/apps
appicons_DATA =								\
	org.xfce.xfwm4-tweaks.svg							\
	org.xfce.workspaces.svg						\
	org.xfce.xfwm4.svg							\
	xfwm4-default.svg

actionsiconsdir = $(datadir)/icons/hicolor/scalable/actions
actionsicons_DATA =							\
	xfce-wm-close.svg						\
	xfce-wm-maximize.svg						\
	xfce-wm-menu.svg						\
	xfce-wm-minimize.svg						\
	xfce-wm-shade.svg						\
	xfce-wm-stick.svg						\
	xfce-wm-unmaximize.svg						\
	xfce-wm-unshade.svg						\
	xfce-wm-unstick.svg

EXTRA_DIST = $(appicons_DATA) $(actionsicons_DATA)
